<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_balance_report"
        android:orderInCategory="100"
        android:title="@string/balance_report"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profit_loss_report"
        android:orderInCategory="101"
        android:title="@string/profit_loss_report"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_budget"
        android:orderInCategory="102"
        android:title="@string/manage_budgets"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>