<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.cashmate.fragments.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.example.cashmate.fragments.TransactionsFragment"
        android:label="@string/transactions"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.example.cashmate.fragments.BudgetFragment"
        android:label="@string/budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.cashmate.fragments.ReportsFragment"
        android:label="@string/reports"
        tools:layout="@layout/fragment_reports" />

</navigation>